--- a/pom.xml
+++ b/pom.xml
@@ -20,5 +20,11 @@
       <version>7.9.0</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>io.qameta.allure</groupId>
+      <artifactId>allure-maven</artifactId>
+      <version>2.8</version>
+    </dependency>
   </dependencies>
 </project>
