--- a/pom.xml
+++ b/pom.xml
@@ -21,10 +21,10 @@
       <scope>test</scope>
     </dependency>
 
-    <dependency>
-      <groupId>io.qameta.allure</groupId>
-      <artifactId>allure-maven</artifactId>
-      <version>2.8</version>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>io.qameta.allure</groupId>-->
+<!--      <artifactId>allure-maven</artifactId>-->
+<!--      <version>2.8</version>-->
+<!--    </dependency>-->
   </dependencies>
 </project>
