WebDriverFactory: Code refactor

--- a/src/test/resources/resources.properties
+++ b/src/test/resources/resources.properties
@@ -1,4 +1,8 @@
-CHROME=chrome
-SAFARI=safari
+# Can be "chrome", "safari", "firefox"
+web_browser=chrome
 WEB_URL=https://practice.automationtesting.in
 remote_driver_url=http://192.168.1.3:4444
+# mode can be "--headless" or empty
+mode=--headless
+# web driver can be "remote" or empty
+webdriver_source=""
