--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,11 @@
       <scope>compile</scope>
     </dependency>
 
+    <dependency>
+      <groupId>io.qameta.allure</groupId>
+      <artifactId>allure-testng</artifactId>
+      <version>2.25.0</version>
+    </dependency>
 <!--    <dependency>-->
 <!--      <groupId>io.qameta.allure</groupId>-->
 <!--      <artifactId>allure-maven</artifactId>-->
