--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
       <groupId>io.qameta.allure</groupId>
       <artifactId>allure-testng</artifactId>
       <version>2.25.0</version>
+      <scope>compile</scope>
     </dependency>
 <!--    <dependency>-->
 <!--      <groupId>io.qameta.allure</groupId>-->
