--- a/pom.xml
+++ b/pom.xml
@@ -35,10 +35,32 @@
       <version>2.25.0</version>
       <scope>compile</scope>
     </dependency>
-<!--    <dependency>-->
-<!--      <groupId>io.qameta.allure</groupId>-->
-<!--      <artifactId>allure-maven</artifactId>-->
-<!--      <version>2.8</version>-->
-<!--    </dependency>-->
+
+    <dependency>
+      <groupId>io.qameta.allure</groupId>
+      <artifactId>allure-maven</artifactId>
+      <version>2.8</version>
+    </dependency>
   </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+          <groupId>io.qameta.allure</groupId>
+          <artifactId>allure-maven</artifactId>
+          <version>2.8</version>
+        <configuration>
+          <reportVersion>2.8</reportVersion>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
+  <pluginRepositories>
+    <pluginRepository>
+      <id>central</id>
+      <url>https://repo.maven.apache.org/maven2</url>
+    </pluginRepository>
+  </pluginRepositories>
+
 </project>
