--- a/pom.xml
+++ b/pom.xml
@@ -22,12 +22,12 @@
       <scope>compile</scope>
     </dependency>
 
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.13.2</version>
-      <scope>compile</scope>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>junit</groupId>-->
+<!--      <artifactId>junit</artifactId>-->
+<!--      <version>4.13.2</version>-->
+<!--      <scope>compile</scope>-->
+<!--    </dependency>-->
 
     <dependency>
       <groupId>io.qameta.allure</groupId>
@@ -41,10 +41,48 @@
       <artifactId>allure-maven</artifactId>
       <version>2.8</version>
     </dependency>
+
+<!--  <dependency>-->
+<!--      <groupId>org.apache.maven.surefire</groupId>-->
+<!--      <artifactId>surefire-testng</artifactId>-->
+<!--      <version>3.0.0</version>-->
+<!--  </dependency>-->
+
+  <dependency>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-surefire-plugin</artifactId>
+      <version>2.19.1</version>
+  </dependency>
   </dependencies>
 
   <build>
     <plugins>
+        <plugin>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <!-- latest version does not work well with JUnit5 -->
+            <version>2.19.1</version>
+            <dependencies>
+                <dependency>
+                    <groupId>org.junit.platform</groupId>
+                    <artifactId>junit-platform-surefire-provider</artifactId>
+                    <version>1.0.3</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.junit.jupiter</groupId>
+                    <artifactId>junit-jupiter-engine</artifactId>
+                    <version>5.0.3</version>
+                </dependency>
+            </dependencies>
+            <configuration>
+                <suiteXmlFiles>
+                    <suiteXmlFile>regression.xml</suiteXmlFile>
+                </suiteXmlFiles>
+<!--                <includes>-->
+<!--                    <include>*.*</include>-->
+<!--                </includes>-->
+            </configuration>
+        </plugin>
+
           <plugin>
               <groupId>io.qameta.allure</groupId>
               <artifactId>allure-maven</artifactId>
@@ -64,8 +102,8 @@
                 <target>1.8</target> <!-- Change this to your Java version, e.g., 17 for Java 17 -->
             </configuration>
         </plugin>
-    </plugins>
 
+    </plugins>
   </build>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
