Selenium Mode: new headless option add, --headless=new

--- a/src/test/resources/resources.properties
+++ b/src/test/resources/resources.properties
@@ -3,6 +3,6 @@ web_browser=chrome
 WEB_URL=https://practice.automationtesting.in
 remote_driver_url=http://192.168.1.3:4444
 # mode can be "--headless" or empty
-mode=--headless
+mode=--headless=new
 # web driver can be "remote" or empty
 webdriver_source=""
